# Cong_tac

./: 00_READ_THIS_FIRST.txt  ARCHITECTURE.md  BUILD_GUIDE.md  CHECKLIST.md  CMakeLists.txt  HUONG_DAN_TIENG_VIET.txt  INSTALL.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SETUP.md  START_HERE.txt  SYSTEM_OVERVIEW.md  URGENT_SETUP.txt  Untitled111111.cpp  build.bat  build.sh  main.cpp  setup.bat
include/: app_controller.h  course.h  database.h  grade.h  student.h  ui_manager.h  user.h
src/: main.cpp
src/backend/: course.cpp  database.cpp  grade.cpp  student.cpp  user.cpp
src/frontend/: app_controller.cpp  ui_manager.cpp
